--- a/2018-09-28-vcf-add-abs-pos.ipynb
+++ b/2018-09-28-vcf-add-abs-pos.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 585,
    "metadata": {
     "scrolled": false
    },
@@ -32,79 +32,139 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The \"with\" statement\n",
-      "********************\n",
+      "Help on class OrderedDict in module collections:\n",
       "\n",
-      "The \"with\" statement is used to wrap the execution of a block with\n",
-      "methods defined by a context manager (see section *With Statement\n",
-      "Context Managers*). This allows common \"try\"...\"except\"...\"finally\"\n",
-      "usage patterns to be encapsulated for convenient reuse.\n",
-      "\n",
-      "   with_stmt ::= \"with\" with_item (\",\" with_item)* \":\" suite\n",
-      "   with_item ::= expression [\"as\" target]\n",
-      "\n",
-      "The execution of the \"with\" statement with one \"item\" proceeds as\n",
-      "follows:\n",
-      "\n",
-      "1. The context expression (the expression given in the \"with_item\")\n",
-      "   is evaluated to obtain a context manager.\n",
-      "\n",
-      "2. The context manager's \"__exit__()\" is loaded for later use.\n",
-      "\n",
-      "3. The context manager's \"__enter__()\" method is invoked.\n",
-      "\n",
-      "4. If a target was included in the \"with\" statement, the return\n",
-      "   value from \"__enter__()\" is assigned to it.\n",
-      "\n",
-      "   Note: The \"with\" statement guarantees that if the \"__enter__()\"\n",
-      "     method returns without an error, then \"__exit__()\" will always be\n",
-      "     called. Thus, if an error occurs during the assignment to the\n",
-      "     target list, it will be treated the same as an error occurring\n",
-      "     within the suite would be. See step 6 below.\n",
-      "\n",
-      "5. The suite is executed.\n",
-      "\n",
-      "6. The context manager's \"__exit__()\" method is invoked.  If an\n",
-      "   exception caused the suite to be exited, its type, value, and\n",
-      "   traceback are passed as arguments to \"__exit__()\". Otherwise, three\n",
-      "   \"None\" arguments are supplied.\n",
-      "\n",
-      "   If the suite was exited due to an exception, and the return value\n",
-      "   from the \"__exit__()\" method was false, the exception is reraised.\n",
-      "   If the return value was true, the exception is suppressed, and\n",
-      "   execution continues with the statement following the \"with\"\n",
-      "   statement.\n",
-      "\n",
-      "   If the suite was exited for any reason other than an exception, the\n",
-      "   return value from \"__exit__()\" is ignored, and execution proceeds\n",
-      "   at the normal location for the kind of exit that was taken.\n",
-      "\n",
-      "With more than one item, the context managers are processed as if\n",
-      "multiple \"with\" statements were nested:\n",
-      "\n",
-      "   with A() as a, B() as b:\n",
-      "       suite\n",
-      "\n",
-      "is equivalent to\n",
-      "\n",
-      "   with A() as a:\n",
-      "       with B() as b:\n",
-      "           suite\n",
-      "\n",
-      "Changed in version 3.1: Support for multiple context expressions.\n",
-      "\n",
-      "See also: **PEP 343** - The \"with\" statement\n",
-      "\n",
-      "     The specification, background, and examples for the Python \"with\"\n",
-      "     statement.\n",
-      "\n",
-      "Related help topics: CONTEXTMANAGERS, EXCEPTIONS, yield\n",
+      "class OrderedDict(builtins.dict)\n",
+      " |  Dictionary that remembers insertion order\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      OrderedDict\n",
+      " |      builtins.dict\n",
+      " |      builtins.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __delitem__(self, key, /)\n",
+      " |      Delete self[key].\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __init__(self, /, *args, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  __reduce__(...)\n",
+      " |      Return state information for pickling\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __reversed__(...)\n",
+      " |      od.__reversed__() <==> reversed(od)\n",
+      " |  \n",
+      " |  __setitem__(self, key, value, /)\n",
+      " |      Set self[key] to value.\n",
+      " |  \n",
+      " |  __sizeof__(...)\n",
+      " |      D.__sizeof__() -> size of D in memory, in bytes\n",
+      " |  \n",
+      " |  clear(...)\n",
+      " |      od.clear() -> None.  Remove all items from od.\n",
+      " |  \n",
+      " |  copy(...)\n",
+      " |      od.copy() -> a shallow copy of od\n",
+      " |  \n",
+      " |  fromkeys(...) from builtins.type\n",
+      " |      OD.fromkeys(S[, v]) -> New ordered dictionary with keys from S.\n",
+      " |      If not specified, the value defaults to None.\n",
+      " |  \n",
+      " |  items(...)\n",
+      " |      D.items() -> a set-like object providing a view on D's items\n",
+      " |  \n",
+      " |  keys(...)\n",
+      " |      D.keys() -> a set-like object providing a view on D's keys\n",
+      " |  \n",
+      " |  move_to_end(...)\n",
+      " |      Move an existing element to the end (or beginning if last==False).\n",
+      " |      \n",
+      " |      Raises KeyError if the element does not exist.\n",
+      " |      When last=True, acts like a fast version of self[key]=self.pop(key).\n",
+      " |  \n",
+      " |  pop(...)\n",
+      " |      od.pop(k[,d]) -> v, remove specified key and return the corresponding\n",
+      " |      value.  If key is not found, d is returned if given, otherwise KeyError\n",
+      " |      is raised.\n",
+      " |  \n",
+      " |  popitem(...)\n",
+      " |      od.popitem() -> (k, v), return and remove a (key, value) pair.\n",
+      " |      Pairs are returned in LIFO order if last is true or FIFO order if false.\n",
+      " |  \n",
+      " |  setdefault(...)\n",
+      " |      od.setdefault(k[,d]) -> od.get(k,d), also set od[k]=d if k not in od\n",
+      " |  \n",
+      " |  update(...)\n",
+      " |      D.update([E, ]**F) -> None.  Update D from dict/iterable E and F.\n",
+      " |      If E is present and has a .keys() method, then does:  for k in E: D[k] = E[k]\n",
+      " |      If E is present and lacks a .keys() method, then does:  for k, v in E: D[k] = v\n",
+      " |      In either case, this is followed by: for k in F:  D[k] = F[k]\n",
+      " |  \n",
+      " |  values(...)\n",
+      " |      D.values() -> an object providing a view on D's values\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __hash__ = None\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from builtins.dict:\n",
+      " |  \n",
+      " |  __contains__(self, key, /)\n",
+      " |      True if D has a key k, else False.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __getitem__(...)\n",
+      " |      x.__getitem__(y) <==> x[y]\n",
+      " |  \n",
+      " |  __len__(self, /)\n",
+      " |      Return len(self).\n",
+      " |  \n",
+      " |  get(...)\n",
+      " |      D.get(k[,d]) -> D[k] if k in D, else d.  d defaults to None.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "help(\"with\")"
+    "help(collections.OrderedDict)"
    ]
   },
   {
