--- a/2018-09-28-vcf-add-abs-pos.ipynb
+++ b/2018-09-28-vcf-add-abs-pos.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 668,
    "metadata": {
     "scrolled": false
    },
@@ -32,139 +32,110 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class OrderedDict in module collections:\n",
+      "Help on class Reader in module vcfpy.reader:\n",
       "\n",
-      "class OrderedDict(builtins.dict)\n",
-      " |  Dictionary that remembers insertion order\n",
+      "class Reader(builtins.object)\n",
+      " |  Class for parsing of files from ``file``-like objects\n",
       " |  \n",
-      " |  Method resolution order:\n",
-      " |      OrderedDict\n",
-      " |      builtins.dict\n",
-      " |      builtins.object\n",
+      " |  Instead of using the constructor, use the class methods\n",
+      " |  :py:meth:`~Reader.from_stream` and\n",
+      " |  :py:meth:`~Reader.from_path`.\n",
+      " |  \n",
+      " |  On construction, the header will be read from the file which can cause\n",
+      " |  problems.  After construction, :py:class:`~Reader` can be used as\n",
+      " |  an iterable of :py:class:`~vcfpy.record.Record`.\n",
+      " |  \n",
+      " |  :raises: :py:class:`~vcfpy.exceptions.InvalidHeaderException` in the case\n",
+      " |      of problems reading the header\n",
+      " |  \n",
+      " |  .. note::\n",
+      " |      It is important to note that the ``header`` member is used during\n",
+      " |      the parsing of the file.  **If you need a modified version then\n",
+      " |      create a copy, e.g., using :py:method:`~vcfpy.header.Header.copy`**.\n",
+      " |  \n",
+      " |  .. note::\n",
+      " |      If you use the ``parsed_samples`` feature and you write out\n",
+      " |      records then you must not change the ``FORMAT`` of the record.\n",
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __delitem__(self, key, /)\n",
-      " |      Delete self[key].\n",
+      " |  __enter__(self)\n",
       " |  \n",
-      " |  __eq__(self, value, /)\n",
-      " |      Return self==value.\n",
+      " |  __exit__(self, type_, value, traceback)\n",
       " |  \n",
-      " |  __ge__(self, value, /)\n",
-      " |      Return self>=value.\n",
-      " |  \n",
-      " |  __gt__(self, value, /)\n",
-      " |      Return self>value.\n",
-      " |  \n",
-      " |  __init__(self, /, *args, **kwargs)\n",
+      " |  __init__(self, stream, path=None, tabix_path=None, record_checks=None, parsed_samples=None)\n",
       " |      Initialize self.  See help(type(self)) for accurate signature.\n",
       " |  \n",
-      " |  __iter__(self, /)\n",
-      " |      Implement iter(self).\n",
+      " |  __iter__(self)\n",
       " |  \n",
-      " |  __le__(self, value, /)\n",
-      " |      Return self<=value.\n",
-      " |  \n",
-      " |  __lt__(self, value, /)\n",
-      " |      Return self<value.\n",
-      " |  \n",
-      " |  __ne__(self, value, /)\n",
-      " |      Return self!=value.\n",
-      " |  \n",
-      " |  __new__(*args, **kwargs) from builtins.type\n",
-      " |      Create and return a new object.  See help(type) for accurate signature.\n",
-      " |  \n",
-      " |  __reduce__(...)\n",
-      " |      Return state information for pickling\n",
-      " |  \n",
-      " |  __repr__(self, /)\n",
-      " |      Return repr(self).\n",
-      " |  \n",
-      " |  __reversed__(...)\n",
-      " |      od.__reversed__() <==> reversed(od)\n",
-      " |  \n",
-      " |  __setitem__(self, key, value, /)\n",
-      " |      Set self[key] to value.\n",
-      " |  \n",
-      " |  __sizeof__(...)\n",
-      " |      D.__sizeof__() -> size of D in memory, in bytes\n",
-      " |  \n",
-      " |  clear(...)\n",
-      " |      od.clear() -> None.  Remove all items from od.\n",
-      " |  \n",
-      " |  copy(...)\n",
-      " |      od.copy() -> a shallow copy of od\n",
-      " |  \n",
-      " |  fromkeys(...) from builtins.type\n",
-      " |      OD.fromkeys(S[, v]) -> New ordered dictionary with keys from S.\n",
-      " |      If not specified, the value defaults to None.\n",
-      " |  \n",
-      " |  items(...)\n",
-      " |      D.items() -> a set-like object providing a view on D's items\n",
-      " |  \n",
-      " |  keys(...)\n",
-      " |      D.keys() -> a set-like object providing a view on D's keys\n",
-      " |  \n",
-      " |  move_to_end(...)\n",
-      " |      Move an existing element to the end (or beginning if last==False).\n",
+      " |  __next__(self)\n",
+      " |      Return next object from file\n",
       " |      \n",
-      " |      Raises KeyError if the element does not exist.\n",
-      " |      When last=True, acts like a fast version of self[key]=self.pop(key).\n",
+      " |      :returns:\n",
+      " |      :raises: ``vcfpy.exceptions.InvalidRecordException`` in the case of\n",
+      " |          problems reading the record\n",
+      " |      :raises: ``StopException`` if at end\n",
       " |  \n",
-      " |  pop(...)\n",
-      " |      od.pop(k[,d]) -> v, remove specified key and return the corresponding\n",
-      " |      value.  If key is not found, d is returned if given, otherwise KeyError\n",
-      " |      is raised.\n",
+      " |  close(self)\n",
+      " |      Close underlying stream\n",
       " |  \n",
-      " |  popitem(...)\n",
-      " |      od.popitem() -> (k, v), return and remove a (key, value) pair.\n",
-      " |      Pairs are returned in LIFO order if last is true or FIFO order if false.\n",
+      " |  fetch(self, chrom_or_region, begin=None, end=None)\n",
+      " |      Jump to the start position of the given chromosomal position\n",
+      " |      and limit iteration to the end position\n",
+      " |      \n",
+      " |      :param str chrom_or_region: name of the chromosome to jump to if\n",
+      " |          begin and end are given and a samtools region string otherwise\n",
+      " |          (e.g. \"chr1:123,456-123,900\").\n",
+      " |      :param int begin: 0-based begin position (inclusive)\n",
+      " |      :param int end: 0-based end position (exclusive)\n",
       " |  \n",
-      " |  setdefault(...)\n",
-      " |      od.setdefault(k[,d]) -> od.get(k,d), also set od[k]=d if k not in od\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Class methods defined here:\n",
       " |  \n",
-      " |  update(...)\n",
-      " |      D.update([E, ]**F) -> None.  Update D from dict/iterable E and F.\n",
-      " |      If E is present and has a .keys() method, then does:  for k in E: D[k] = E[k]\n",
-      " |      If E is present and lacks a .keys() method, then does:  for k, v in E: D[k] = v\n",
-      " |      In either case, this is followed by: for k in F:  D[k] = F[k]\n",
+      " |  from_path(path, tabix_path=None, record_checks=None, parsed_samples=None) from builtins.type\n",
+      " |      Create new :py:class:`Reader` from path\n",
+      " |      \n",
+      " |      .. note::\n",
+      " |          If you use the ``parsed_samples`` feature and you write out\n",
+      " |          records then you must not change the ``FORMAT`` of the record.\n",
+      " |      \n",
+      " |      :param path: the path to load from (converted to ``str`` for\n",
+      " |          compatibility with ``path.py``)\n",
+      " |      :param tabix_path: optional string with path to TBI index,\n",
+      " |          automatic inferral from ``path`` will be tried on the fly\n",
+      " |          if not given\n",
+      " |      :param list record_checks: record checks to perform, can contain\n",
+      " |          'INFO' and 'FORMAT'\n",
       " |  \n",
-      " |  values(...)\n",
-      " |      D.values() -> an object providing a view on D's values\n",
+      " |  from_stream(stream, path=None, tabix_path=None, record_checks=None, parsed_samples=None) from builtins.type\n",
+      " |      Create new :py:class:`Reader` from file\n",
+      " |      \n",
+      " |      .. note::\n",
+      " |          If you use the ``parsed_samples`` feature and you write out\n",
+      " |          records then you must not change the ``FORMAT`` of the record.\n",
+      " |      \n",
+      " |      :param stream: ``file``-like object to read from\n",
+      " |      :param path: optional string with path to store (for display only)\n",
+      " |      :param list record_checks: record checks to perform, can contain\n",
+      " |          'INFO' and 'FORMAT'\n",
+      " |      :param list parsed_samples: ``list`` of ``str`` values with names of\n",
+      " |          samples to parse call information for (for speedup); leave to\n",
+      " |          ``None`` for ignoring\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data descriptors defined here:\n",
       " |  \n",
       " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
       " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes defined here:\n",
-      " |  \n",
-      " |  __hash__ = None\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Methods inherited from builtins.dict:\n",
-      " |  \n",
-      " |  __contains__(self, key, /)\n",
-      " |      True if D has a key k, else False.\n",
-      " |  \n",
-      " |  __getattribute__(self, name, /)\n",
-      " |      Return getattr(self, name).\n",
-      " |  \n",
-      " |  __getitem__(...)\n",
-      " |      x.__getitem__(y) <==> x[y]\n",
-      " |  \n",
-      " |  __len__(self, /)\n",
-      " |      Return len(self).\n",
-      " |  \n",
-      " |  get(...)\n",
-      " |      D.get(k[,d]) -> D[k] if k in D, else d.  d defaults to None.\n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "help(collections.OrderedDict)"
+    "help(vcfpy.Reader)"
    ]
   },
   {
